fix alignment

--- a/frontend/src/css/components/RelatedGroups.css
+++ b/frontend/src/css/components/RelatedGroups.css
@@ -1,3 +1,7 @@
+.RelatedGroups {
+	text-align: center;
+}
+
 .RelatedGroups-title {
 	font-size: 1.75rem;
 }
